--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,7 @@ Jinja2==2.8
 Mako==1.0.4
 MarkupSafe==0.23
 mysql-connector==2.1.4
-psycopg2==2.7.1
-py==1.4.31
+psycopg2==2.7.t1y==1.4.31
 py-bcrypt==0.4
 pycparser==2.14
 pytest==3.0.1
