--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==6.6
 coverage==4.2
 Flask==0.11.1
 Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.6
 Flask-Migrate==2.0.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
